[project]
name = "crewai-kickoff-ui"
version = "0.1.0"
description = "Streamlit UI for interacting with CrewAI Enterprise API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
